--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -1,3 +1,11 @@
-.Meaning {
+.Meaning h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-weight: bold;
+}
+
+.Meaning .example {
   color: white;
+  font-style: italic;
+  margin-top: 10px;
 }
